kubernetes/yml/prometheus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-deployment
  labels:
    app: prometheus  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
      - name: prometheus
        image: quay.io/prometheus/prometheus
        args: [ "--config.file=/etc/prometheus/prometheus.yml", "--storage.tsdb.path=/prometheus", "--web.console.libraries=/usr/share/prometheus/console_libraries", "--web.console.templates=/usr/share/prometheus/consoles" ]
        ports:
        - name: prometheus-port
          containerPort: 9090
        volumeMounts:
        - name: config-volume-prometheus-yml
          mountPath: /etc/prometheus
      volumes:
        - name: config-volume-prometheus-yml
          configMap:
            # Provide the name of the ConfigMap containing the files you want
            # to add to the container
            name: prometheus-config-prometheus.yml	
          
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
spec:
  type: NodePort
  ports:
  - port: 9090
    nodePort: 30909
    targetPort: 9090
    protocol: TCP
    name: http
  selector:
    app: prometheus
---
# An Ingress with 2 hosts and 3 endpoints
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
spec:
  rules:
  - host: prometheus
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus
          servicePort: 9090
